<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list_dashboards"
        android:icon="@drawable/ic_dashboards"
        android:title="@string/action_dashboards"
        app:showAsAction="ifRoom"/>

</menu>