...

        </LinearLayout>

    </ViewAnimator>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_dashboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/new_dashboard"
        android:src="@drawable/ic_new_dashboard"
        android:tint="@color/white"
...
