...
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_dashboard_number_of_columns"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/text_input_dashboard_rows"
        app:layout_constraintEnd_toStartOf="@id/iv_new_dashboard_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_new_dashboard_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_dashboard_columns"
            android:layout_width="match_parent"
...
